--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   },
   "devDependencies": {
     "minecraft-addon-toolchain": "^1.0.3",
-    "minecraft-addon-toolchain-browserify": "^1.0.3"
-  },
-  "dependencies": {
+    "minecraft-addon-toolchain-browserify": "^1.0.3",
     "watch": "^1.0.2"
-  }
+  },
+  "dependencies": {}
 }
